// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameOverModal Snapshots renders correctly in high score state 1`] = `
<View
  animationType="none"
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(2, 6, 23, 0.85)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#1E293B",
            "borderColor": "#3B82F6",
            "borderRadius": 24,
            "borderWidth": 4,
            "elevation": 10,
            "maxWidth": 340,
            "padding": 32,
            "shadowColor": "#3B82F6",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 20,
            "width": "100%",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#EF4444",
            "fontSize": 42,
            "fontStyle": "italic",
            "fontWeight": "900",
            "marginBottom": 24,
            "textShadowColor": "rgba(239, 68, 68, 0.5)",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 10,
          }
        }
      >
        GAME OVER
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(15, 23, 42, 0.5)",
            "borderRadius": 16,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginBottom": 32,
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94A3B8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            SCORE
          </Text>
          <Text
            style={
              {
                "color": "#F8FAFC",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            1500
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94A3B8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            BEST
          </Text>
          <Text
            style={
              {
                "color": "#F8FAFC",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            1500
          </Text>
        </View>
      </View>
      <View
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3B82F6",
            "borderRadius": 16,
            "paddingHorizontal": 48,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#F8FAFC",
              "fontSize": 20,
              "fontWeight": "900",
            }
          }
        >
          NEW GAME
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GameOverModal Snapshots renders correctly in standard state 1`] = `
<View
  animationType="none"
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(2, 6, 23, 0.85)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#1E293B",
            "borderColor": "#3B82F6",
            "borderRadius": 24,
            "borderWidth": 4,
            "elevation": 10,
            "maxWidth": 340,
            "padding": 32,
            "shadowColor": "#3B82F6",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.5,
            "shadowRadius": 20,
            "width": "100%",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#EF4444",
            "fontSize": 42,
            "fontStyle": "italic",
            "fontWeight": "900",
            "marginBottom": 24,
            "textShadowColor": "rgba(239, 68, 68, 0.5)",
            "textShadowOffset": {
              "height": 0,
              "width": 0,
            },
            "textShadowRadius": 10,
          }
        }
      >
        GAME OVER
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(15, 23, 42, 0.5)",
            "borderRadius": 16,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginBottom": 32,
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94A3B8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            SCORE
          </Text>
          <Text
            style={
              {
                "color": "#F8FAFC",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            500
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94A3B8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            BEST
          </Text>
          <Text
            style={
              {
                "color": "#F8FAFC",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            1000
          </Text>
        </View>
      </View>
      <View
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3B82F6",
            "borderRadius": 16,
            "paddingHorizontal": 48,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#F8FAFC",
              "fontSize": 20,
              "fontWeight": "900",
            }
          }
        >
          NEW GAME
        </Text>
      </View>
    </View>
  </View>
</View>
`;
